<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"

    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/name"
        android:textSize="26sp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/editName"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"


        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="26sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/email"
        android:textSize="26sp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/editEmail"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"

        android:ems="10"
        android:inputType="textEmailAddress"
        android:textSize="26sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/telephone"
        android:textSize="26sp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/editTelephone"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"

        android:ems="10"
        android:inputType="phone"
        android:textSize="26sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/address"
        android:textSize="26sp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/editAddress"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"

        android:ems="10"
        android:inputType="text"
        android:textSize="26sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/gender"
        android:textSize="26sp"
        android:textColor="@color/black" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/btnMale"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/male"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/btnFemale"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"

            android:text="@string/female"
            android:textSize="20sp" />

    </RadioGroup>

    <Button
            android:id="@+id/btnComplete"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/complete"
            android:textSize="20sp" />

</LinearLayout>